tests/script/negative/duplicates/constructors.s
type T1 { C }
type T2 { C }
